[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Enzo Ferrari <ferrarienzobf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
